<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/payment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="@dimen/toolbar_elevation"
            android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
            app:layout_scrollFlags="scroll|enterAlways|snap"
            tools:targetApi="21" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_marginTop="50dp"
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/merchant_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_medium"
                android:layout_marginTop="@dimen/spacing_small"
                android:layout_marginEnd="@dimen/spacing_medium"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="Centurion University of Technology and Management" />

            <TextView
                android:id="@+id/origin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_medium"
                android:layout_marginEnd="@dimen/spacing_medium"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/merchant_name"
                android:text="https://cutm.ac.in/" />





            <TextView
                android:id="@+id/contact_title"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_medium"
                android:layout_marginLeft="@dimen/spacing_medium"
                android:layout_marginTop="30dp"
                android:orientation="vertical"
                android:text="@string/contact_information"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/origin"
                />

            <EditText
                android:id="@+id/payer_name"
                android:layout_width="match_parent"
                android:layout_marginTop="30dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_medium"
                android:layout_marginRight="@dimen/spacing_medium"
                android:background="@android:drawable/editbox_background"
                android:hint="@string/your_full_name"
                android:inputType="textPersonName"
                android:minWidth="180dip"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/contact_title" />

            <EditText
                android:id="@+id/payer_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="@dimen/spacing_medium"
                android:layout_marginRight="@dimen/spacing_medium"
                android:background="@android:drawable/editbox_background"
                android:hint="@string/your_phone_number"
                android:inputType="phone"
                android:minWidth="180dip"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/payer_name" />

            <EditText
                android:id="@+id/payer_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="@dimen/spacing_medium"
                android:layout_marginRight="@dimen/spacing_medium"
                android:background="@android:drawable/editbox_background"
                android:hint="@string/your_email_address"
                android:inputType="textEmailAddress"
                android:minWidth="180dip"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/payer_phone" />










            <RadioGroup
                android:id="@+id/shipping_options"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/payer_email">
            </RadioGroup>

            <TextView
                android:id="@+id/address_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_medium"
                android:layout_marginStart="@dimen/spacing_medium"
                android:layout_marginTop="30dp"
                android:orientation="vertical"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="Total: Rupee 22000.00 / Year"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/shipping_options"
                />

            <RadioGroup
                android:id="@+id/shipping_addresses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/address_title">

                <RadioButton
                    android:id="@+id/us_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="Paytm"
                    />

                <RadioButton
                    android:id="@+id/canada_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="Net Banking"
                    />

                <RadioButton
                    android:id="@+id/uk_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="UPI"
                    android:checked="false"
                    />
            </RadioGroup>

            <TextView
                android:id="@+id/explanation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_medium"
                android:layout_marginTop="@dimen/spacing_small"

                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/shipping_addresses" />

            <ImageView
                android:id="@+id/icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginLeft="@dimen/spacing_medium"
                android:layout_marginTop="@dimen/spacing_small"
                android:contentDescription="@null"
                android:src="@drawable/cutm"
                app:layout_constraintBottom_toBottomOf="@id/pay"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/pay" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/pay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginRight="@dimen/spacing_medium"
                android:layout_marginTop="@dimen/spacing_small"
                android:text="@string/pay"
                app:backgroundTint="?attr/colorSecondary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/explanation" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>